--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <main>
             
         <section id="background">
-
             <!-- <div class="card" style="width: 18rem;" > -->
                 <div class="card d-block mx-auto" style="width: 18rem;" >
                     <!-- d-block mx-auto : centra la card -->
@@ -29,12 +28,11 @@
                     <div class="face front"></div>
                     <div class="face back"></div>
                 </div> 
-        </section>
-        <section>
-            <div id="description" class="card-body">
-                    <h6 class="card-subtitle mb-2 text-muted">I'm Frontend Developer | Html | Css | Javascript | Bootstrap | React</h6>
-                    <a href="https://github.com/JorgeZubieta" class="btn btn-primary">Go to my Git repository</a>
-            </div>
+
+                <div id="description" class="card-body">
+                    <h3 class="card-subtitle mb-2 mt-2">I'm Jorge Zubieta | Frontend Developer | Html | Css | Javascript | Bootstrap | React</h3>
+                </div>
+
         </section>
 
     </main>
