--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <footer id="footer" class="pb-2 pt-4">
             <div class="row text-center">
             <!-- text-center alinea el texto al centro de cada columna  -->
-                <h6> Design by Jorge Zubieta</h6>                          
+                <h6> Design by Jorge Zubieta @ course of Codo a Codo - 2022</h6>                          
             </div>
     </footer>
     <!-- /footer -->
