--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div> 
 
                 <div id="description" class="card-body">
-                    <h3 class="card-subtitle mb-2 mt-2">I'm Jorge Zubieta | Frontend Developer | Html | Css | Javascript | Bootstrap | React</h3>
+                    <h3 class="card-subtitle mb-2 mt-2">I'm Jorge Zubieta Frontend Developer | Html | Css | Javascript | Bootstrap | React</h3>
                 </div>
 
         </section>
