padding of description changed, footer updte

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="face back"></div>
                 </div> 
 
-                <div id="description" class="card-body">
+                <div id="description" class="card-body pt-5">
                     <h3 class="card-subtitle mb-2 mt-2">I'm Jorge Zubieta Frontend Developer | Html | Css | Javascript | Bootstrap | React</h3>
                 </div>
 
@@ -41,10 +41,10 @@
 
     <!-- footer -->
     <!-- la clase "pb" paddign bootom, "pt" paddign tienen las opciones 1,2,3,4 en este caso "4" tamaño del padding -->
-    <footer id="footer" class="pb-2 pt-4">
+    <footer id="footer" class="pb-2 pt-3">
             <div class="row text-center">
             <!-- text-center alinea el texto al centro de cada columna  -->
-                <h6> Design by Jorge Zubieta @ course of Codo a Codo - 2022</h6>                          
+                <h6> Design by Jorge Zubieta - Course of Codo a Codo<br>@2022</h6>                          
             </div>
     </footer>
     <!-- /footer -->
