gradient efect added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                     <div class="face back"></div>
                 </div> 
 
-                <div id="description" class="card-body pt-5">
-                    <h3 class="card-subtitle mb-2 mt-2">I'm Jorge Zubieta Frontend Developer | Html | Css | Javascript | Bootstrap | React</h3>
+                <div class="card-description">
+                    <h3 class="card-subtitle mr-5 pt-5">I'm Jorge Zubieta Frontend Developer </h3>
+                    <h6 class="card-subtitle">Html | Css | Javascript | Bootstrap | React
+                    </h6>
                 </div>
 
         </section>
