details html and css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div> 
 
                 <div class="card-description">
-                    <h3 class="card-subtitle mr-5 pt-5">I'm Jorge Zubieta Frontend Developer </h3>
+                    <h3 class="card-subtitle mr-5 pt-5">Hello! I'm Jorge Zubieta Frontend Developer </h3>
                     <h6 class="card-subtitle">Html | Css | Javascript | Bootstrap | React
                     </h6>
                 </div>
