--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <!-- Styles CSS -->
     <link rel="stylesheet" href="styles.css">
     <!-- /Styles CSS -->
+    
+    <!-- javascript -->
+    <script src="index.js" defer></script>
+
 </head>
 
 <body>
@@ -52,7 +56,8 @@
     <!-- /footer -->
 
 
-<!--Scripts de Bootstrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!--Scripts de Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
 </body>
 </html>
